--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       document.getElementById('home').style.display = 'none';
     };
     </script> -->
-    <video autoplay muted loop id="b_video" src="videos\sky.mov">
+    <video autoplay muted loop id="b_video" src="videos\background_1.mov">
       <!-- <source src="videos\background_1.mov" type="video/mov"> -->
     </video>
     <nav>
