Pridana navigacia pre mobilne zariadenia

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <nav>
       <!-- <div id="nav-wrap"> -->
         <ul>
-          <li><a class="active nav-home" href="#w_1">Home</a></li>
+          <li><a id="nav-home" href="#w_1"><span>Home</span></a></li>
           <!-- <li><a href="#news">News</a></li> -->
-          <li><a href="#w_2">Gallery</a></li>
-          <li><a href="#w_3">Partneri</a></li>
-          <li><a href="#w_4">Kontakt</a></li>
+          <li><a href="#w_2" id="nav-gallery"><span>Gallery</span></a></li>
+          <li><a href="#w_3" id="nav-partners"><span>Partneri</span></a></li>
+          <li><a href="#w_4" id="nav-contact"><span>Kontakt</span></a></li>
         </ul>
       <!-- </div> -->
     </nav>
