Uplny redesign - uprava pozicovania

--- a/index.html
+++ b/index.html
@@ -3,93 +3,80 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css\easy0.css"> -->
-    <link rel="stylesheet" href="hovers\css\hover.css">
-    <link rel="stylesheet" href="css\hover.css">
     <link rel="stylesheet" href="css\reset.css">
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-<!-- zobrazenie pre telefony -->
-    <link rel="stylesheet" media="screen and (max-width: 599px)" href="css\phone.css"/>
-<!-- zobrazenie pre velke telefony, portret tablety -->
+<!-- ........................ Zobrazenia ........................ -->
+<!-- Telefony -->
+    <!-- <link rel="stylesheet" media="screen and (max-width: 599px)" href="css\phone.css"/> -->
+<!-- Velke telefony, portret tablety -->
     <link rel="stylesheet" media='screen and (min-width: 600px)' href="css\tablet.css"/>
-<!-- zobrazenie pre landscape tablety -->
+<!-- Landscape tablety -->
     <link rel="stylesheet" media='screen and (min-width: 768px)' href="css\landscape.css"/>
-<!-- zobrazenie pre desktopy -->
+<!-- Desktopy -->
     <link rel="stylesheet" media='screen and (min-width: 992px)' href="css\desktop.css"/>
-<!-- zobrazenie pre najvacsi viewport -->
-    <link rel="stylesheet" media='screen and (min-width: 1200px)' href="css\large.css"/>/
+<!-- Najvacsi viewport -->
+    <link rel="stylesheet" media='screen and (min-width: 1200px)' href="css\large.css"/>
 <!-- jQuery -->
-    <script src="scripts\jquery.js"></script>
-
+    <!-- <script src="scripts\jquery.js"></script> -->
     <title>Airness</title>
   </head>
   <body>
-    <!-- <script>
-    window.onload = function() {
-      document.getElementById('home').style.display = 'none';
-    };
-    </script> -->
-    <video autoplay muted loop id="b_video" src="videos\background_1.mov">
-      <!-- <source src="videos\background_1.mov" type="video/mov"> -->
-    </video>
-    <nav>
-      <!-- <div id="nav-wrap"> -->
-        <ul>
-          <li><a id="nav-home" href="#w_1"><span>Home</span></a></li>
-          <!-- <li><a href="#news">News</a></li> -->
-          <li><a href="#w_2" id="nav-gallery"><span>Gallery</span></a></li>
-          <li><a href="#w_3" id="nav-partners"><span>Partneri</span></a></li>
-          <li><a href="#w_4" id="nav-contact"><span>Kontakt</span></a></li>
-        </ul>
-      <!-- </div> -->
-    </nav>
-    <div class="scrolling-wrapper">
-      <div id="w_1">
-        <section id="home">
-          <!-- <h1>Čím sa zaoberá Airness?</h1> -->
-          <div id="popis">
-              <ul>
-                <li>Klimatizácia</li>
-                <li>Vzduchotechnika</li>
-                <li>Čistenie ozónom</li>
-                <li>Tepelné čerpadlá</li>
-              </ul>
-          </div>
-        </section>
-      </div>
-
-      <div id="w_2">
-        <section id="gallery">
-          <h1>Naše realizácie</h1>
-          <div id="gallery-wrapper">
-          </div>
-        </section>
-      </div>
-      <div id="w_3">
-        <section id="partners">
-          <h1>Partneri</h1>
-          Kontakt - aby ti, ktorych nasa ponuka oslovila,
-          mohli vyuzit nase sluzby.
-          <span>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non purus ultrices, volutpat elit eu, hendrerit justo. Donec fermentum lorem nulla, id tristique augue posuere eget. Nullam nec metus nec nisi rhoncus finibus. Aenean id nisi leo. Ut dictum neque vitae odio tincidunt, sit amet cursus nisi laoreet. Donec quis nibh nulla. Vestibulum a tincidunt enim. Praesent neque mauris, ultrices ut odio at, laoreet dapibus metus.
-
-  Aenean ornare sollicitudin dui eu pharetra. Curabitur auctor fermentum risus vitae aliquam. In in fringilla nunc. Donec tempor non nibh a fermentum. Integer ut eros velit. Duis pharetra ornare ex, et finibus turpis pharetra quis. Duis tempor, lorem pharetra sollicitudin interdum, lorem arcu vulputate magna, quis rutrum tortor lacus eu neque. Nam interdum pharetra metus vestibulum auctor. Ut faucibus, sapien eu iaculis tincidunt, nisi tellus placerat tortor, non tempus ipsum sem a ipsum. Duis dui nisi, venenatis id blandit nec, tincidunt ac nisl. Fusce ullamcorper commodo est in euismod. Proin nunc risus, tristique maximus fermentum non, pharetra in nulla. Vestibulum sit amet ex a eros tristique varius.
-
-  Ut dapibus purus nisi, ac fringilla arcu tristique ac. Curabitur at venenatis nibh, id dictum est. Aenean porttitor erat sapien, vel auctor elit tristique non. Morbi a eros at lacus maximus facilisis. In elementum pharetra nulla, ac blandit massa condimentum in. Sed nec faucibus purus. Praesent hendrerit est augue, a rutrum justo viverra ut. Duis quis vulputate ipsum, id accumsan diam.
-
-  Donec dolor purus, aliquet a lacus nec, laoreet dictum massa. Cras hendrerit nibh libero, ac finibus dui consectetur sagittis. Ut ut porttitor enim, et congue velit. Phasellus sed consectetur enim. Phasellus id tincidunt felis, nec vehicula massa. Maecenas consequat magna vitae interdum dictum. Praesent sagittis, odio ut tristique semper, metus nibh imperdiet nulla, at mattis nisl nisi at lectus. Sed a ex ac ipsum gravida blandit vitae quis lectus. Duis tempus, velit vitae volutpat pellentesque, dui nulla semper nulla, in consectetur lacus orci sit amet massa. Duis nunc purus, vulputate et nisi quis, aliquet ullamcorper dolor. Nullam suscipit, ligula a aliquam sagittis, lorem velit scelerisque lectus, sed volutpat augue nibh id sapien. Ut in cursus odio. Vivamus ac auctor felis. Curabitur dictum urna lectus, a vestibulum quam condimentum in. Suspendisse velit felis, porta nec mattis sed, fringilla in eros. Curabitur nec congue mauris, a pharetra diam.
-          </span>
-        </section>
-      </div>
-      <div id="w_4">
-        <section id="contact">
-          <h1>Kontakt</h1>
-          Tu je miesto pre loga partnerov, aby nasi zakaznici vedeli,
-          s kym spolupracujeme, od koho kupujeme material atd.
-        </section>
-      </div>
+    <div id="bvideo">
+      <video autoplay muted loop src="videos\sky.mov">
+      </video>
     </div>
-    <script type="text/javascript" src="scripts\easy.js"></script>
+    <div class="all-wrapper">
+      <div class="navi-wrap">
+         <div class="nav">
+            <ul>
+              <li><a href="#w1" id="nav-home"><span>Home</span></a></li>
+              <li><a href="#w2" id="nav-gallery"><span>Gallery</span></a></li>
+              <li><a href="#w3" id="nav-partners"><span>About</span></a></li>
+              <li><a href="#w4" id="nav-contact"><span>Contact</span></a></li>
+            </ul>
+        </div>
+      </div>
+      <div class="scrolling-wrapper">
+        <div id="w1">
+          <section id="home">
+            <div id="popis">
+                <ul>
+                  <li>Vzduchotechnika</li>
+                  <li>Klimatizácia</li>
+                  <li>Tepelné čerpadlá</li>
+                  <li>Čistenie ozónom</li>
+                </ul>
+            </div>
+          </section>
+        </div>
+        <div id="w2">
+<!--
+          <section id="gallery">
+            <h1>Naše realizácie</h1>
+            <div id="gallery-wrapper">
+            </div>
+          </section>
+-->
+        </div>
+        <div id="w3">
+<!--
+          <section id="partners">
+          </section>
+-->
+        </div>
+        <div id="w4">
+<!--
+          <section id="contact">
+            <h1>Kontakt</h1>
+            <br>
+            Tel: 0910633693
+            Mail: luftr@eu.com
+            Sidlisko: Male Levare 493
+          </section>
+-->
+        </div>
+      </div>
+  </div>
+    <!-- <script type="text/javascript" src="scripts\easy.js"></script> -->
   </body>
 </html>
