--- a/index.html
+++ b/index.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="sk-SK" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=cp1250">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\reset.css">
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+
+
+    <!-- <link rel="stylesheet" type="text/css" href="css/main.css"/> -->
+    <style>
+    .preloader{
+       position: absolute;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       z-index: 9999;
+       background-image: url("preloader.gif");
+       background-repeat: no-repeat;
+       background-position: center;
+       background-color: #FFF;
+    }
+    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script src="C:\Users\racekj\Desktop\gitAirnessWeb\scripts\easy.js"></script> -->
+    <script src="scripts\easy.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/large.css"/>
 <!-- ........................ Zobrazenia ........................ -->
 <!-- Telefony -->
-    <!-- <link rel="stylesheet" media="screen and (max-width: 599px)" href="css\phone.css"/> -->
+    <!-- <link rel="stylesheet" media="screen and (max-width: 599px)" href="css/phone.css"/> -->
 <!-- Velke telefony, portret tablety -->
-    <link rel="stylesheet" media='screen and (min-width: 600px)' href="css\tablet.css"/>
+    <!-- <link rel="stylesheet" media='screen and (min-width: 600px)' href="css/tablet.css"/> -->
 <!-- Landscape tablety -->
-    <link rel="stylesheet" media='screen and (min-width: 768px)' href="css\landscape.css"/>
+    <!-- <link rel="stylesheet" media='screen and (min-width: 768px)' href="css/landscape.css"/> -->
 <!-- Desktopy -->
-    <link rel="stylesheet" media='screen and (min-width: 992px)' href="css\desktop.css"/>
+    <!-- <link rel="stylesheet" media='screen and (min-width: 992px)' href="css/desktop.css"/> -->
 <!-- Najvacsi viewport -->
-    <link rel="stylesheet" media='screen and (min-width: 1200px)' href="css\large.css"/>
-<!-- jQuery -->
-    <!-- <script src="scripts\jquery.js"></script> -->
     <title>Airness</title>
   </head>
   <body>
-    <div id="bvideo">
-      <video autoplay muted loop src="videos\sky.mov">
-      </video>
-    </div>
+    <div class="preloader"></div>
     <div class="all-wrapper">
       <div class="navi-wrap">
          <div class="nav">
@@ -37,46 +51,67 @@
         </div>
       </div>
       <div class="scrolling-wrapper">
-        <div id="w1">
-          <section id="home">
-            <div id="popis">
-                <ul>
-                  <li>Vzduchotechnika</li>
-                  <li>Klimatizácia</li>
-                  <li>Tepelné čerpadlá</li>
-                  <li>Čistenie ozónom</li>
-                </ul>
+            <div id="w1" class="slide">
+              <div id="home">
+                <div id="popis">
+                    <ul>
+                      <li>Vzduchotechnika</li>
+                      <li>Klimatizácia</li>
+                      <li>Tepelné čerpadlá</li>
+                      <li>Čistenie ozónom</li>
+                    </ul>
+                </div>
+              </div>
             </div>
-          </section>
-        </div>
-        <div id="w2">
-<!--
-          <section id="gallery">
-            <h1>Naše realizácie</h1>
-            <div id="gallery-wrapper">
+            <div class="separator" id="w-g">
+              <div class="galery-grid">
+                <!-- <div class="grid-item">
+                  <img data-src="https://source.unsplash.com/random/400x400?bear,cat&v=1" alt="something">
+                </div>
+                <div class="grid-item item-2">
+                  <img data-src="https://source.unsplash.com/random/400x400?bear,cat&v=1" alt="something">
+                </div>
+                <div class="grid-item item-3">
+                  <img data-src="https://source.unsplash.com/random/400x400?bear,cat&v=1" alt="something">
+                </div>
+                <div class="grid-item item-4">
+                  <img data-src="https://source.unsplash.com/random/400x400?bear,cat&v=1" alt="something">
+                </div>
+                <div class="grid-item item-5">
+                  <img data-src="https://source.unsplash.com/random/400x400?bear,cat&v=1" alt="something">
+                </div>
+                <div class="grid-item item-6">
+                  <img data-src="https://source.unsplash.com/random/400x400?bear,cat&v=1" alt="something">
+                </div>
+                <div class="grid-item item-7">
+                  <img data-src="https://source.unsplash.com/random/400x400?bear,cat&v=1" alt="something">
+                </div>
+                <div class="grid-item item-8">
+                  <img data-src="https://source.unsplash.com/random/400x400?bear,cat&v=1" alt="something">
+                </div> -->
+                <!-- <div class="grid-item item-9">
+                  <img src="https://source.unsplash.com/random/400x400?bear,cat&v=1" alt="something">
+                </div>
+                <div class="grid-item item-10">
+                  <img src="https://source.unsplash.com/random/400x400?bear,cat&v=1" alt="something">
+                </div> -->
             </div>
-          </section>
--->
-        </div>
-        <div id="w3">
-<!--
-          <section id="partners">
-          </section>
--->
-        </div>
-        <div id="w4">
-<!--
-          <section id="contact">
-            <h1>Kontakt</h1>
-            <br>
-            Tel: 0910633693
-            Mail: luftr@eu.com
-            Sidlisko: Male Levare 493
-          </section>
--->
-        </div>
+            </div>
+            <div id="w2" class="slide">
+              <div class="galery-grid">
+              </div>
+            </div>
+            <div class="separator">
+            </div>
+            <div id="w3" class="slide">
+            </div>
+            <div class="separator">
+            </div>
+            <div id="w4" class="slide">
+              <div id="contact">
+              </div>
+          </div>
       </div>
   </div>
-    <!-- <script type="text/javascript" src="scripts\easy.js"></script> -->
   </body>
 </html>
